Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33073

Selecting text is slow if selection is synced with clipboard

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 17.0.1
    • Qt Creator 17.0.0-rc1, Qt Creator 18.0.0 (18.0 branch)
    • Editors
    • None
    • Linux/Wayland
    • 1369bec9e (17.0)

      Some platform context: Linux has both a selection and a clipboard, and on e.g. KDE it is possible to sync them. That means that selected text ends up on the clipboard.

      https://codereview.qt-project.org/c/qt-creator/qt-creator/+/637170 added some watching logic for the clipboard.  When selecting a block of text, that causes (for a large enough selection) hundreds of hits. Those hits all try to retrieve the text (only to check if it's) empty, which in turn causes some UI stutter (at some point we end up polling the clipboard, wich takes time).

       

      Could we maybe try to debounce the checking?

        For Gerrit Dashboard: QTCREATORBUG-33073
        # Subject Branch Project Status CR V

            davschul David Schulz
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes