TextEditor: optimize updating the paste action

Selecting text with the mouse emits QClipboard::changed many times on
systems that updates the clipboard on selection changes and checking
whether the clipboard text is empty in the slot is potentially slow.
Debounce calling the update paste action code to reduce checking the
clipboard text.

Fixes: QTCREATORBUG-33073
Change-Id: Ib8a6d4ed7a3688bc543e51ea7e9f012746c9630f
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: hjk <hjk@qt.io>